# admin-service/model/agency_machine.go
@@ -1,0 +1,13 @@
+package model
+
+import (
+	"gorm.io/gorm"
+)
+
+type AgencyMachine struct {
+	gorm.Model
+	Agency    Agency  `gorm:"foreignKey:AgencyID"`
+	AgencyID  uint    `gorm:"index"`
+	Machine   Machine `gorm:"foreignKey:MachineID"`
+	MachineID uint    `gorm:"index"`
+}
